--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bower": "^1.4.1",
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
+    "cheerio": "^0.19.0",
     "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.3",
@@ -58,6 +59,7 @@
     "passport-google-oauth": "^0.1.5",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
+    "request": "^2.60.0",
     "run-sequence": "^1.0.2",
     "serve-favicon": "^2.2.0",
     "sinon": "^1.13.0",
