--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^0.19.0",
     "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.4",
+    "deferred": "^0.7.2",
     "ejs": "^2.3.3",
     "express": "^4.12.0",
     "express-session": "^1.11.3",
