--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mongoose-search-plugin": "^0.1.2",
     "node-sass": "^3.2.0",
     "nodemon": "^1.3.7",
+    "numeral": "^1.5.3",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-google-oauth": "^0.1.5",
